cabal-version:  3.0
build-type:     Simple

name:           phygraph
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/PhyGraph#readme>
homepage:       https://github.com/githubuser/PhyGraph#readme
bug-reports:    https://github.com/githubuser/PhyGraph/issues
author:         Ward Wheeler
maintainer:     wheeler@amnh.org
copyright:      2021 Ward Wheeler
license:        BSD-3-Clause
license-file:   LICENSE

-- for static linking add options -static -optl-static -optl-pthread
-- GKW cabal build --allow-newer --with-compiler=/usr/local/bin/ghc

extra-source-files:
    -- Specify the header files as required source files here.
    -- Do not specify them in the c-sources or cxx-sources stanzas.
    -- This is required for sdist and install commands to work correctly.
    ffi/external-direct-optimization/alignCharacters.h
    ffi/external-direct-optimization/alignmentMatrices.h
    ffi/external-direct-optimization/c_alignment_interface.h
    ffi/external-direct-optimization/c_code_alloc_setup.h
    ffi/external-direct-optimization/costMatrix.h
    ffi/external-direct-optimization/debug_constants.h
    ffi/external-direct-optimization/dyn_character.h
    ffi/external-direct-optimization/ukkCheckPoint.h
    ffi/external-direct-optimization/ukkCommon.h
    ffi/memoized-tcm/costMatrix_2d.hpp
    ffi/memoized-tcm/costMatrix_3d.hpp
    ffi/memoized-tcm/costMatrixWrapper_2d.h
    ffi/memoized-tcm/costMatrixWrapper_3d.h
    ffi/memoized-tcm/costMatrixWrapper.h
    ffi/memoized-tcm/dynamicCharacterOperations.h


flag Debug
  Description: Compile with debugging flags
  Default:     False
  Manual:      True


flag Optimize
  Description: Compile with full optimizations
  Default:     False
  Manual:      True


flag Forego-Sanity
  Description: Compile with full optimizations
  Default:     False
  Manual:      True


-- Group of buildinfo specifications to correctly build and link to the C & C++:
-- FFI code.
common ffi-buildinfo

  cc-options:
    -rdynamic --std=c11
 
  hs-source-dirs:
    ffi

  c-sources:
    ffi/external-direct-optimization/alignCharacters.c
    ffi/external-direct-optimization/alignmentMatrices.c
    ffi/external-direct-optimization/c_alignment_interface.c
    ffi/external-direct-optimization/c_code_alloc_setup.c
    ffi/external-direct-optimization/costMatrix.c
    ffi/external-direct-optimization/dyn_character.c
    ffi/external-direct-optimization/ukkCheckPoint.c
    ffi/external-direct-optimization/ukkCommon.c

  -- Here we list all directories that contain C & C++ header files that the FFI
  -- tools will need to locate when preprocessing the C files. Without listing
  -- the directories containing the C header files here, the FFI preprocessor
  -- (hsc2hs, c2hs, etc.) will fail to locate the requisite files. Note also,
  -- that the parent directory of the nessicary C & C++ header files must be
  -- specified. The preprocessor will not recursively look in subdirectories for
  -- header files!
  include-dirs:
    ffi/external-direct-optimization


common ghc-flags

  ghc-options:
    -fdiagnostics-color=always
    -fhide-source-paths
    -j

  ghc-prof-options:
    -fprof-auto
    -fprof-cafs
    -optc
    -rdynamic

  if flag(Debug)
    ghc-options:
      -debug
      -g 
      -ddump-cmm
      -ddump-to-file

  if !flag(Optimize)
    ghc-options:
      -O0
  else
    ghc-options:
      -O2
      -threaded
      -fexcess-precision
      -fexpose-all-unfoldings
      -flate-specialise
      -foptimal-applicative-do
      -fspecialize-aggressively
      -fstatic-argument-transformation

  if !flag(Forego-Sanity)
    ghc-options:
      -Wall
      -Wcompat
      -Wdodgy-foreign-imports
      -Wduplicate-exports
      -Wempty-enumerations
      -Widentities
      -Wincomplete-patterns
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
--      -Wmissed-specialisations          
      -Wmissing-deriving-strategies          
      -Wmissing-fields
      -Wmissing-home-modules
      -Wmissing-signatures
      -Wmissing-export-lists
      -Wnoncanonical-monad-instances
      -Wnoncanonical-monoid-instances
      -Woverflowed-literals
      -Woverlapping-patterns
      -Wredundant-constraints
      -Wsemigroup
      -Wtabs
      -Wunrecognised-warning-flags
      -Wunused-binds
      -Wunused-do-bind
      -Wunused-foralls
      -Wunused-imports
      -Wunused-matches
      -Wwrong-do-bind
      -Wpartial-fields

    if impl(ghc >= 8.10)
      ghc-options:
        -Wderiving-defaults
        -Wunused-packages


-- Global deviations from Haskell98
common language-specs

  -- Always use MonadFail(fail), not Monad(fail)
  other-extensions:
    DerivingStrategies


-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --
--
-- Preamble of package description and reusable definitions from above has ended
-- and below we list all build targets of the package. Build targets include:
--
--   * Primary executable(s) for public usage
--
--   * Exposed sub-libraries for public consumption as program dependancies
--
--   * Benchmarks for executables and sub-libraries
--
--   * Test-suites for executables and sub-libraries
--
--   * Additional executables for non-public, diagnostic purposes
--
-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --
                  
            
-- Phylogenetic Graphs
--
-- This is the main program of this package, supporting fully featured
-- phylogenetic trees, networks, and forests.
executable phyg

  import:
    ffi-buildinfo,
    ghc-flags,
    language-specs

  main-is: phygraph.hs

  ghc-options:  -Wall
                -rtsopts
                -- for weeder
--                -fwrite-ide-info 
                -- linux static binaries
--		            -optl-static -optl-pthread
                -static
--                -fllvm



-- delete these for OSX for linux static binaries
--  if !os(darwin)
--    cc-options: -static
--    ld-options: -static -pthread

  build-depends:  alphabet
                , dynamic-character
                , measure-class
                , measure-transition
                , measure-unit
                , base >=4.10
                , containers >=0.6
                , graphviz
                , fgl
                , text
                , parallel
                , deepseq
                , bv
                -- , exceptions
                , array
                , split
                , text-short
                , random
                , hashable
                , time
                , vector
                , sort
                -- , unboxing-vector
                , MissingH >= 1.4.3
                , bv-little
                -- , bits
                -- , hashmap
                , bimap
                , logfloat
                , random-shuffle
                
               -- currently doesn't compile but could be useful
               -- lots of good functions
               --, Graphalyze
 
                
  default-extensions: BangPatterns

  default-language: Haskell2010

  -- include the source files needed in src for github library
  -- this for local library files
  hs-source-dirs: .  
                  ../../PhyloLibs
  
  other-modules:  Commands.ProcessCommands
                  Commands.CommandExecution
                  Debug.Debug
                  Graphs.GraphOperations
                  GraphOptimization.Medians
                  GraphOptimization.PostOrderFunctions
                  GraphOptimization.PreOrderFunctions
                  GraphOptimization.Traversals
                  Input.DataTransformation
                  Input.FastAC
                  Input.ReadInputFiles
                  Input.Reorganize
                  Input.TNTUtilities
                  Search.Build
                  Search.DistanceWagner
                  Search.DistanceMethods
                  Search.WagnerBuild
                  Search.Swap
                  Types.Types
                  Types.DistanceTypes
                  Utilities.Distances
                  Utilities.DistanceUtilities
                  Utilities.LocalGraph
                  Utilities.LocalSequence
                  Utilities.TcmHash
                  Utilities.Utilities
                  Reconciliation.Adams
                  Reconciliation.Eun
                  Reconciliation.ReconcileGraphs
                  
                  -- From PhyloLibs
                  Cyclic
                  GeneralUtilities
                  GraphFormatUtilities
                  ParallelUtilities
                  SymMatrix


-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --
--
-- Collection of sub-libraries which both, compose the package's primary program
-- (PCG/PhyG), and are also exposed for external consumption by other programs.
--
-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --
                  
            
library alphabet

  import:
    ghc-flags,
    language-specs

  default-language:
    Haskell2010

  hs-source-dirs:
    lib/alphabet/src

  build-depends:
    measure-unit,
    utility,
    base                     >= 4.11      && < 5.0,
    bimap                    >= 0.3       && < 1.0,
    binary                   >= 0.8       && < 1.0,
    containers               >= 0.6.2     && < 1.0,
    deepseq                  >= 1.4       && < 2.0,
    keys                     >= 3.12      && < 4.0,
    mtl                      >= 2.2.2     && < 3.0,
    QuickCheck               >= 2.14      && < 3.0,
    semigroupoids            >= 5.3       && < 5.4,
    text-short               >= 0.1.3     && < 1.0,
    transformers             >= 0.5.6     && < 1.0,
    vector                   >= 0.12.0.3  && < 0.13,

  -- Apparently this is needed to compile with profiling, which is really stupid.
  -- It should only be in the modules which use TemplateHaskell, not all modules.
  -- I consider this a temporary hack to get things to compile with profiling.
  other-extensions: TemplateHaskell

  exposed-modules:
    Data.Alphabet
    Data.Alphabet.Codec
    Data.Alphabet.IUPAC
    Data.Alphabet.Special

  other-modules:
    Data.Alphabet.Internal      


-- Library for performing string alignment on dynamic characters.

-- Provides various metrics for scoring static characters and
-- performing string alignment on dynamic characters.
library dynamic-character

  import:
    ffi-buildinfo,
    ghc-flags,
    language-specs

  default-language:
    Haskell2010

  hs-source-dirs:
    lib/dynamic-character/src

  build-depends:
    alphabet,
    measure-class,
    measure-transition,
    measure-unit,
    utility,
    base                     >= 4.11      && < 5.0,
    bv-little,
    containers               >= 0.6.2     && < 1.0,
    matrices                 >= 0.5       && < 1.0,            
    monad-loops              >= 0.4       && < 1.0,
    primitive                >= 0.7.1     && < 1.0,
    vector                   >= 0.12.0.3  && < 0.13,

  exposed-modules:
    Bio.DynamicCharacter
    Bio.DynamicCharacter.Measure
    Bio.DynamicCharacter.HandleGaps
    DirectOptimization.Pairwise
    DirectOptimization.Pairwise.Visualization
    DirectOptimization.Pairwise.Swapping
    DirectOptimization.Pairwise.Ukkonen
    DirectOptimization.PreOrder

  other-modules:
    DirectOptimization.Pairwise.Direction
    DirectOptimization.Pairwise.Huge
    DirectOptimization.Pairwise.Internal
    DirectOptimization.Pairwise.Slim
    DirectOptimization.Pairwise.Slim.FFI
    DirectOptimization.Pairwise.Wide


-- Library defining classes of measures.

library measure-class

  import:
    ghc-flags,
    language-specs,

  default-language:
    Haskell2010

  hs-source-dirs:
    lib/measure/class/src

  build-depends:
    base          >= 4.11      && < 5.0,
    semigroupoids >= 5.3       && < 5.4,

  exposed-modules:
    Measure.Dispersion
    Measure.Distance
    Measure.Centroid
    Measure.Range


library measure-transition

  import:
    ffi-buildinfo,
    ghc-flags,
    language-specs,

  default-language:
    Haskell2010

  hs-source-dirs:
    lib/measure/transition/src

  build-depends:
    measure-class,
    measure-unit,
    transition-matrix-ffi,
    base                     >= 4.11      && < 5.0,

  exposed-modules:
    Measure.Transition

  other-modules:
    Measure.Transition.Compact
    Measure.Transition.Edits
    Measure.Transition.States
    Measure.Transition.Symbols
    Measure.Transition.Types


-- Library defining units of measures.

library measure-unit

  import:
    ghc-flags,
    language-specs,

  default-language:
    Haskell2010

  hs-source-dirs:
    lib/measure/unit/src

  build-depends:
    base     >= 4.11      && < 5.0,
    deepseq  >= 1.4       && < 2.0,
    hashable >= 1.3       && < 2.0,

  exposed-modules:
    Measure.Unit.AlignmentCost
    Measure.Unit.StateChangeCost
    Measure.Unit.SymbolChangeCost
    Measure.Unit.SymbolCount
    Measure.Unit.SymbolIndex


library transition-matrix

  import:
    ffi-buildinfo,
    ghc-flags,
    language-specs,

  default-language:
    Haskell2010

  hs-source-dirs:
    lib/measure/transition-matrix/src

  build-depends:
    measure-class,
    measure-transition,
    measure-unit,
    transition-matrix-ffi,
    base                     >= 4.11      && < 5.0,
    containers               >= 0.6.2     && < 1.0,
    deepseq                  >= 1.4       && < 2.0,
    hashable                 >= 1.3       && < 2.0,
    hashtables               >= 1.2       && < 2.0,
    semigroupoids            >= 5.3       && < 5.4,
    vector                   >= 0.12.0.3  && < 0.13,

  exposed-modules:
    TransitionMatrix
    TransitionMatrix.Diagnosis
    TransitionMatrix.Diagnosis.Error
    TransitionMatrix.Metricity

  other-modules:
    Layout.Compact.Symbols
    Layout.Compact.Symbols.Internal
    Layout.Compact.Symbols.Square
    Layout.Compact.Symbols.Triangular
    Layout.Compact.Symbols.Unsafe
    Layout.Memoize.Dispersion
    Layout.Memoize.Hashable
    Layout.Memoize.States
    Layout.Special
    Layout.Special.DiscreteCrossGap
    Layout.Special.Discrete
    Layout.Special.L1Norm
    Layout.Special.Type
    TransitionMatrix.Representation
    

library transition-matrix-ffi

  import:
    ffi-buildinfo,
    ghc-flags,
    language-specs,

  default-language:
    Haskell2010

  hs-source-dirs:
    lib/measure/transition-matrix-ffi/src

  build-depends:
    base                     >= 4.11      && < 5.0,
    deepseq                  >= 1.4       && < 2.0,
    vector                   >= 0.12.0.3  && < 0.13,

  exposed-modules:
    Layout.Compact.States
    Layout.Compact.States.Indexing

  other-modules:
    Layout.Compact.States.Allocation
    Layout.Compact.States.Structure


-- Collection of utility functions and data structures

-- Defines custom data structures for special use cases, more abstract functions
-- that base provides, and re-exported correcting to deficient libraries.

library utility

  import:
    ghc-flags,
    language-specs

  default-language:
    Haskell2010

  hs-source-dirs:
    lib/utility/src

  build-depends:
    base                     >= 4.11      && < 5.0,
    binary                   >= 0.8       && < 1.0,
    containers               >= 0.6.2     && < 1.0,
    deepseq                  >= 1.4       && < 2.0,
    foldl                    >= 1.4       && < 2.0,
    hashable                 >= 1.3       && < 2.0,
    keys                     >= 3.12      && < 4.0,
    lens                     >= 4.18      && < 6.0,
    matrix                   >= 0.3.6     && < 0.4,
    pointed                  >= 5.0       && < 6.0,
    QuickCheck               >= 2.14      && < 3.0,
    semigroupoids            >= 5.3       && < 5.4,
    vector                   >= 0.12.0.3  && < 0.13,
    vector-binary-instances  >= 0.2       && < 1.0,
    vector-instances         >= 3.4       && < 3.5,

  if impl(ghc < 9.0)          
    build-depends:
      integer-gmp            >= 1.0.2     && < 2.0
              

  exposed-modules:
    Data.List.Utility
    Data.Matrix.NotStupid
    Data.Vector.NonEmpty


-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --
--
-- Test-suites of the sub-libraries which compose PCG/PhyG
--
-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --

test-suite test-dynamic-character

  import:
    ghc-flags,
    language-specs

  default-language:
    Haskell2010

  main-is:
    TestSuite.hs

  type:
    exitcode-stdio-1.0

  hs-source-dirs:
    lib/dynamic-character/test

  build-depends:
    alphabet,
    dynamic-character,
    measure-transition,
    measure-unit,
    base                     >= 4.11      && < 5.0,
    bimap                    >= 0.3       && < 1.0,
    containers               >= 0.6.2     && < 1.0,
    QuickCheck               >= 2.14      && < 3.0,
    tasty                    >= 1.4       && < 2.0,
    tasty-quickcheck         >= 0.10      && < 1.0,
    vector                   >= 0.12.0.3  && < 0.13,

  other-modules:
    DirectOptimization.Pairwise.Test
    Test.Aligners
    Test.QuickCheck.Instances.DynamicCharacter

    
-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --
--
-- Additional executables which exist for the one of a few select purposes:
--
--   * Generating data for PCG/PhyG input
--
--   * Debugging the component sub-libraries of PCG/PhyG and PCG/PhyG itself
--
--   * Performing correctness verification
--
--   * Stocastically searching for non-totality counterexamples
--
-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --


executable inspect-dynamic-character

  import:
    ghc-flags,
    language-specs

  default-language:
    Haskell2010

  main-is:
    Inspect.hs

  hs-source-dirs:
    lib/dynamic-character/test

  build-depends:
    alphabet,
    dynamic-character,
    measure-transition,
    measure-unit,
    base                     >= 4.11      && < 5.0,
    bimap                    >= 0.3       && < 1.0,
    containers               >= 0.6.2     && < 1.0,
    QuickCheck               >= 2.14      && < 3.0,
    tasty                    >= 1.4       && < 2.0,
    tasty-quickcheck         >= 0.10      && < 1.0,
    vector                   >= 0.12.0.3  && < 0.13,

  other-modules:
    Test.Aligners
    Test.QuickCheck.Instances.DynamicCharacter
