Cabal-Version: 3.0
Name:          PHAGE-file-source
Version:       0.1.0
Build-Type:    Simple
Tested-With:
  GHC == 9.2.2


Author:        Alex Washburn <github@recursion.ninja>
Copyright:     (c) 2022 Alex Washburn
License:       BSD-3-Clause
License-File:  LICENSE


Maintainer:    Ward Wheeler <wheeler@amnh.org>
Homepage:      https://github.com/wardwheeler/PhyGraph#readme
Bug-Reports:   https://github.com/wardwheeler/PhyGraph/issues


Synopsis:
  Library for interacting with file paths in a type-safe manner.


Description:
  Exposes a well-typed file path type and functionality for interacting with the
  file system through with this type.


Category:
  Error Handling 
  Filesystem
  IO
  IO-Streams


Extra-Doc-Files:
  CHANGELOG.md
  README.md


library file-source

  default-language:
    GHC2021

  hs-source-dirs:
    src

  build-depends:
    PHAGE-validation-transformer,
    base                     >= 4.11      && < 5.0,
    binary                   >= 0.8       && < 1.0,
    bytestring               >= 0.10.10   && < 0.11,
    deepseq                  >= 1.4       && < 2.0,
    directory                >= 1.3.6     && < 2.0,
    filepath                 >= 1.4.2     && < 2.0,
    Glob                     >= 0.9       && < 2.0,
    hashable                 >= 1.3       && < 2.0,
    keys                     >= 3.12      && < 4.0,
    megaparsec               >= 9.0       && < 10.0,
    mono-traversable         >= 1.0       && < 2.0,
    mono-traversable-keys    >= 0.1       && < 1.0,
    pipes                    >= 4.3.10    && < 5.0,
    QuickCheck               >= 2.14      && < 3.0,
    semigroupoids            >= 5.3       && < 5.4,
    text                     >= 1.2.4     && < 2.0,
    text-short               >= 0.1.3     && < 1.0,
    text-show                >= 3.8.1     && < 4.0,
    validation               >= 1.1       && < 2.0,
    vector                   >= 0.12.0.3  && < 0.13,

  autogen-modules:
    Paths_PHAGE_file_source
    
  exposed-modules:
    Data.FileSource
    Data.FileSource.IO
    Data.FileSource.InputStreamError
    Data.FileSource.ParseStreamError
    Data.FileSource.OutputStreamError

  other-modules:
    Paths_PHAGE_file_source

  ghc-options:
    -- Sanity check warnings:
    --   1. Fail on a warning
    --   2. Include all warnings by default
    --   3. Exclude the undesirable warnings
    -Werror
    -Weverything
    -- Exclusions:
    -Wno-implicit-prelude
    -Wno-inferred-safe-imports
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-type-defaults
    -Wno-unsafe
